# gc-vm

./: .gitignore  README.md  asm.c  common.c  common.h  dasm.c  gc.c  instruction.c  instruction.h  meson.build
syntax/: vm.vim
tests/: perf.vm  test1.vm  test2.vm  test3.vm  test4.vm
